<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_participant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.example.katesudal.participantgroupmanagement.Activity.AddParticipantActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorDarkBrown"
            android:text="Name :"/>
        <EditText
            android:id="@+id/editTextParticipantName"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorLightCream"
            android:textCursorDrawable="@drawable/cursor_cream"
            android:textColorHighlight="@color/colorDarkCream"
            android:textColor="@color/colorDarkBrown" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorDarkBrown"
            android:text="Gender :"/>
        <RadioGroup
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="@color/colorNormalBrown"
                android:textSize="18sp"
                android:text="Male"/>
            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="@color/colorNormalBrown"
                android:textSize="18sp"
                android:text="Female"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorDarkBrown"
            android:text="Type :"/>
        <RadioGroup
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioStaff"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:textColor="@color/colorNormalBrown"
                android:textSize="18sp"
                android:text="Staff"/>
            <RadioButton
                android:id="@+id/radioParticipant"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:textColor="@color/colorNormalBrown"
                android:textSize="18sp"
                android:text="Participant"/>
        </RadioGroup>
        <Button
            android:id="@+id/buttonAddParticipant"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@drawable/button_add_participant"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:text="Add" />
        <Button
            android:id="@+id/buttonCancelAddParticipant"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/button_cancel_participant"
            android:textColor="@color/colorDarkBrown"
            android:text="Cancel" />
    </LinearLayout>
</RelativeLayout>
