...
    android:paddingEnd="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/background_participant_item">

    <TextView
        android:id="@+id/textViewParticipantName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:textColor="@color/colorNormalBrown"
        android:textSize="24sp"/>

...
