...
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp">
        <Button
            android:id="@+id/buttonGotoAddParticipant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_cancel_participant"
            android:textColor="@color/colorDarkBrown"
            android:textStyle="bold"
            android:text="+ Add New Participant"/>
...
