...
                android:layout_weight="1"
                android:background="#123F">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="OK"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/buttonCancelCreateProject"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
...
