<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_special_section"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.katesudal.participantgroupmanagement.Activity.AddSpecialGroupActivity">
    <ScrollView
        android:id="@+id/scrollViewAllParticipantName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/background">
        <com.example.katesudal.participantgroupmanagement.FlowLayout
            android:id="@+id/layoutAllParticipantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"/>
    </ScrollView>
    <LinearLayout
        android:id="@+id/layoutTextViewSpecialGroupName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/textViewSpecialGroupName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@color/colorNormalCream"
            android:textColor="@color/colorDarkBrown"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollViewNewSpecialGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorVeryLightCream">
        <com.example.katesudal.participantgroupmanagement.FlowLayout
            android:id="@+id/layoutNewSpecialGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"/>
    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorLightBrown"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/background">
        <LinearLayout
            android:id="@+id/buttonCreateSpecialGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_create">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorDarkBrown"
                android:textStyle="bold"
                android:text="Submit"/>
        </LinearLayout>
        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/colorLightBrown"/>
        <LinearLayout
            android:id="@+id/buttonCancelCreateSpecialGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_create">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorNormalBrown"
                android:text="Cancel"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
