...
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorDarkBrown"
            android:text="Special Group Name : "/>
        <EditText
            android:id="@+id/editTextSpecialGroupName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="7dp"
            android:padding="3dp"
            android:background="@color/colorLightCream"
            android:textCursorDrawable="@drawable/cursor_cream"
            android:textColorHighlight="@color/colorDarkCream"
            android:textColor="@color/colorDarkBrown"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/buttonAddSpecialGroupName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="1dp"
            android:background="@drawable/button_add_participant"
...
